# boilerplates

./: .gitignore  .pre-commit-config.yaml  README.md  file_structure.py  pyproject.toml  use_case_example.py
docker-composes/: docker-compose.fatsapi_postgresql.yml
docker_files/: Dockerfile_python
faq/: integration_adapter.py
garbage/clients/autograph/: base.py  client.py  models.py  usage_boilerplates.py
garbage/clients/http/: base.py  client.py
garbage/clients/osrm/: base.py  client.py  models.py
garbage/configuration/: settings.py
utils/dataclasses/: mixins.py
utils/http/clients/: abstracts.py
utils/use_cases/: __init__.py  abstract.py  exceptions.py  typing.py
utils/use_cases/controllers/: __init__.py  view.py
utils/use_cases/handlers/: __init__.py  errors.py  warnings.py
